<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnCryptoOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/blue"
        android:text="@string/crypto"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnCurrencyOption"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCurrencyOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:backgroundTint="@color/blue"
        android:text="@string/currency"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCryptoOption"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/btnCryptoOption"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_choose_what_you_want_to_do"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCryptoOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>