<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clCurrency"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnChange"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:background="@color/white"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/tvResult1"
        app:layout_constraintEnd_toEndOf="@+id/etnCurrency"
        app:layout_constraintStart_toStartOf="@+id/etnCurrency"
        app:layout_constraintTop_toBottomOf="@+id/etnCurrency"
        app:srcCompat="@drawable/button_switch"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <EditText
        android:id="@+id/etnCurrency"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="236dp"
        android:background="@color/black"
        android:ems="10"
        android:fontFamily="@font/convergence"
        android:gravity="center"
        android:hint="@string/input_here"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="208dp"
        android:background="@color/black"
        android:fontFamily="@font/convergence"
        android:gravity="center"
        android:hint="@string/result"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etnCurrency"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etnCurrency" />

    <Spinner
        android:id="@+id/spFromCurrency"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:autofillHints="Selected Currency"
        android:background="@color/blue"
        android:contentDescription="@string/currency"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/etnCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/etnCurrency"
        app:layout_constraintTop_toTopOf="@+id/etnCurrency"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spToCurrency1"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:autofillHints="Selected Currency"
        android:background="@color/blue"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/tvResult1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/tvResult1"
        app:layout_constraintTop_toTopOf="@+id/tvResult1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>